<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/violet"
        android:textSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_crear_usuario"
        android:layout_width="270dp"
        android:layout_height="98dp"
        android:layout_marginTop="176dp"
        android:backgroundTint="@color/violet"
        android:fontFamily="sans-serif"
        android:text="@string/button_crear_usuario"
        android:textSize="34sp"
        app:iconSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        />


    <Button
        android:id="@+id/b_ingresar"
        android:layout_width="272dp"
        android:layout_height="97dp"
        android:layout_marginBottom="184dp"
        android:text="@string/button_ingresar"
        android:textSize="34sp"
        android:backgroundTint="@color/violet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_crear_usuario"
        app:layout_constraintVertical_bias="0.224" />

</androidx.constraintlayout.widget.ConstraintLayout>