<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/games_imagen"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/games_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/games_name"
                android:textColor="@color/white"
                android:textSize="25dp">

            </TextView>

            <TextView
                android:id="@+id/games_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/games_genero"
                android:textColor="@color/white"
                android:textSize="25dp">

            </TextView>

            <TextView
                android:id="@+id/games_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/games_precio"
                android:textColor="@color/white"
                android:textSize="25dp">

            </TextView>

            <Button
                android:id="@+id/b_comprar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gree"
                android:text="Comprar"
                android:textColor="@color/violet"
                android:textSize="25dp">

            </Button>
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>