<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="413dp"
        android:gravity="top"
        android:layout_height="107dp"
        android:background="@color/violet"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment_activity_home_prueba2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="139dp"
                android:layout_height="80dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/game_crush" />

            <TextView
                android:id="@+id/tv_nickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>


        <TextView
            android:id="@+id/saldo_disponible"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/saldo_disponible"
            android:textAlignment="center"
            android:textColor="@color/gree"
            android:textSize="10dp"
            tools:ignore="TextSizeCheck">

        </TextView>


        <TextView
            android:id="@+id/tv_cerrar_sesion"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cerrar_sesion"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18dp">

        </TextView>
    </LinearLayout>


    <fragment
        android:id="@+id/nav_host_fragment_activity_home_prueba2"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="410dp"
        android:layout_height="1073dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_view"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:itemTextColor="@color/white"
        app:itemBackground="@color/violet"
        app:itemIconTint="@color/black"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>