<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText"
    android:layout_height="600dp"
    android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:background="@color/violet">


    <LinearLayout
        android:layout_width="417dp"
        android:layout_height="345dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="119dp"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_steam"
            android:layout_width="347dp"
            android:layout_height="96dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="85dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/steam_logo">

                </ImageView>

                <LinearLayout
                    android:layout_width="244dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/comision_Steam"
                            android:textAlignment="center"
                            android:textColor="@color/gree"
                            android:textSize="16dp"
                            android:textStyle="bold">

                        </TextView>
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_nakama"
            android:layout_width="347dp"
            android:layout_height="96dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="222dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/nakama_logo">

                </ImageView>

                <LinearLayout
                    android:layout_width="244dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/comision_Nakama"
                            android:textAlignment="center"
                            android:textColor="@color/gree"
                            android:textSize="16dp"
                            android:textStyle="bold">

                        </TextView>
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_epicgames"
            android:layout_width="347dp"
            android:layout_height="101dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="343dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="99dp"
                    android:src="@drawable/epic_games_logo">

                </ImageView>

                <LinearLayout
                    android:layout_width="244dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/comision_EpicGames"
                            android:textAlignment="center"
                            android:textColor="@color/gree"
                            android:textSize="16dp"
                            android:textStyle="bold">

                        </TextView>
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginBottom="84dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/en_total_compra"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginBottom="84dp"
        android:text="0"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/gree"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="133dp" />

    <Button
        android:id="@+id/btn_confirmar_compra"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_compra"
        android:textColor="@color/gree"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="535dp" />

    <ImageButton
        android:id="@+id/ib_volver_Inter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="355dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegir_intermediario"
        android:textColor="@color/black"
        android:hint="0"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ib_volver_Inter"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>